@@ -11,6 +11,9 @@ Added - indicates new functionality or new part of distribution
 Changed - indicates a change in using/behavior FreeRapid Downloader
 Fixed - indicates a bug fix
 
+  Added : Plugin API
+            - Hash class with functions to calculate hashes
+
 8th August 2010 - FreeRapid Downloader 0.85 Alpha 3
   Added : Plugin API
             - FileStreamRecognizer interface and accompanying methods for setting it
@@ -40,7 +43,7 @@ Fixed - indicates a bug fix
   Fixed : Regressions in FreeRapid Downloader 0.85 Alpha 1
      - Look and Feel reverts to Quaqua on every startup
      - Plugins - clipboard monitoring status is not properly set
-     - "ClassCastException" in links history dialog     
+     - "ClassCastException" in links history dialog
 
 11th July 2010 - FreeRapid Downloader 0.85 Alpha 1
   Added : New action in Remove menu: "Remove Completed Links and Deleted Files"
